Width of the buttons for change region on mobile was fixed

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -187,7 +187,7 @@ h3:first-letter {
 		backdrop-filter: brightness(70%) blur(20px);
 		background-color: rgba(240, 248, 255, 0.404);
 		z-index: 1;
-		width: 40%;
+		width: fit-content;
 		padding-block: 1rem;
 		padding-inline: .5rem;
 		border-radius: 1rem;
